--- a/src/ui/Login.css
+++ b/src/ui/Login.css
@@ -134,7 +134,7 @@ body {
   padding: 10px;
   border: 1px solid #9d9d9d;
   border-radius: 5px;
-  /font-size: 16px;
+  font-size: 16px;
   box-sizing: border-box;
 }
 
