--- a/src/ui/Report.css
+++ b/src/ui/Report.css
@@ -1,52 +1,67 @@
 .report-container {
-    display: flex;
-    flex-direction: column;
-    height: 90vh;
-    width: 50vw;
-    background-color: #ffffff;
-    border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  height: 90vh;
+  width: 50vw;
+  background-color: #ffffff;
+  border-radius: 20px;
+}
+
+.report-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px;
+  background-color: #21a6a1;
+  color: white;
+  font-size: 24px;
+  border-radius: 20px 20px 0 0;
+}
+
+.back-btn {
+  color: white;
+  background-color: #21a6a1;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.sentence {
+  font-size: 16px;
+  color: #333;
+  margin: 0;
+  white-space: pre-wrap;
+}
+
+.sentences-container {
+  padding: 20px;
+}
+
+.job {
+  font-weight: 600;
+  color: #21a6a1;
+}
+
+@media (max-width: 767px) {
+  .report-container {
+    width: 90vw; /* 반응형 디자인을 위해 너비 조정 */
   }
-  
+
   .report-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px;
-    background-color: #21a6a1;
-    color: white;
-    font-size: 24px;
-    border-radius: 20px 20px 0 0;
+    font-size: 18px;
+    padding: 10px;
   }
-  
-  .back-btn {
-    color: white;
-    background-color: #21a6a1;
-    border: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
+}
+
+@media (max-width: 479px) {
+  .report-container {
+    width: 95vw;
   }
-  
-  @media (max-width: 767px) {
-    .report-container {
-      width: 90vw; /* 반응형 디자인을 위해 너비 조정 */
-    }
-  
-    .report-header {
-      font-size: 18px;
-      padding: 10px;
-    }
+
+  .report-header {
+    font-size: 16px;
+    padding: 8px;
   }
-  
-  @media (max-width: 479px) {
-    .report-container {
-      width: 95vw; 
-    }
-  
-    .report-header {
-      font-size: 16px;
-      padding: 8px;
-    }
-  }
-  
+}
